src/component/VirtualDesktop.css
:root {
  --vd-border-color: #272626;
  --vd-background-color: #eef0f1;
  --vd-window-bg-color: #bec5bf;
  --vd-box-shadow-color: #00000088;
  --vd-border-radius: 16px;
  --vd-file-border-radius: 4px;
  --vd-text-title-color: #3f3d3d;
  --vd-text-instruction-color: #281313;
  --vd-text-size: 16px;
}

.vd-background {
  background-color: var(--vd-border-color);
  width: 100%;
  height: 90dvh;
  max-height: 800px;
}
.vd-main {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  width: 100%;
  height: 100%;
  font-size: var(--vd-text-size);
  border: var(--vd-border-color) solid 3px;
  background-color: var(--vd-background-color);
  border-radius: var(--vd-border-radius);
  box-sizing: border-box;
  padding: 0em;
  font-family: "DM Mono";
  font-weight: 300;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: start;
  cursor: default;
}

.vd-main .vd-home-bar {
  background-color: var(--vd-window-bg-color);
  color: var(--vd-text-title-color);
  width: 100%;
  height: 1.5em;
  border-top-left-radius: 13px;
  border-top-right-radius: 13px;
  border-bottom: var(--vd-text-instruction-color) solid 1px;
  padding: 0em 1em 0em 1em;
  box-sizing: border-box;
  gap: 1em;
  display: flex;
  flex-direction: row;
}

.vd-main .vd-base-grid {
  display: grid;
  grid-auto-rows: auto;
  grid-template-columns: 1fr;
  width: 100%;
  height: 100%;
  justify-items: center;
  row-gap: 2em;
  padding: 0em 1em 2em 1em;
}

.vd-base-grid .vd-file-icons {
  display: flex;
  flex-direction: row;
  gap: 1em;
  height: 100%;
  width: 100%;
  flex-wrap: wrap;
  align-items: start;
  justify-content: space-around;
  overflow: hidden;
}

.vd-main .vd-file {
  display: flex;
  flex-direction: column;
  background-color: #697fd800;
  padding: 0.25em 0.25em 0.5em 0.25em;
  gap: 0.25em;
  align-items: center;
  justify-content: end;
  width: fit-content;
  height: fit-content;
  cursor: pointer;
}

.vd-main .vd-file:hover {
  background-color: #fbfbfbb1;
}

.vd-main .vd-file:focus {
  background-color: #697fd818;
}

.vd-file .vd-file-name {
  text-align: center;
  width: max-content;
  max-width: 200px;
  height: fit-content;
}

.vd-file .vd-file-image {
  height: 5em;
  width: 5em;
  object-fit: contain;
}

.vd-file .vd-file-image img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

.vd-main .vd-open-image {
  position: absolute;
  width: clamp(200px, 60%, 400px);
  height: clamp(200px, 60%, 500px);
  align-items: center;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow: scroll;
  gap: 0.5em;
  background-color: var(--vd-window-bg-color);
  border-radius: var(--vd-file-border-radius);
  box-shadow: var(--vd-box-shadow-color) 4px 5px 20px 2px;
  transition-duration: "100ms";
  transition-timing-function: "linear";
  cursor: grab;
  overflow-x: hidden;
}

.vd-main .vd-open-image .vd-file-description {
  width: auto;
  height: fit-content;
  text-align: right;
  padding: 0.5em 1em 0.5em 1em;
  box-sizing: border-box;
  background-color: rgba(255, 255, 255, 0.77);
  border-bottom-left-radius: var(--vd-file-border-radius);
  border-bottom-right-radius: var(--vd-file-border-radius);
  color: var(--vd-text-instruction-color);
}

.vd-main .vd-open-image .vd-top-bar {
  position: sticky;
  top: 0%;
  left: 0%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 0.25em 0.5em 0.25em 0.5em;
  background-color: rgb(255, 255, 255);
  border-bottom: var(--vd-border-color) solid 1px;
  border-top-left-radius: var(--vd-file-border-radius);
  border-top-right-radius: var(--vd-file-border-radius);
  color: var(--vd-text-instruction-color);
}

.vd-main .vd-open-image .vd-top-bar .vd-button-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: fit-content;
  gap: 2px;
  box-sizing: border-box;
  padding: 0px;
  background-color: transparent;
  cursor: pointer;
}

.vd-main .vd-open-image .vd-button-row button {
  border-radius: 20%;
  aspect-ratio: 1;
  height: 1.5em;
  color: rgb(249, 238, 238);
  border: none;
  position: relative;
  text-align: center;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  padding: 0px;
  /* padding: 4px 4px 4px 4px; */
  box-sizing: border-box;
}

.vd-main .vd-open-image img {
  flex: 2;
  margin: 0px;
  height: clamp(200px, 80%, 100%);
  box-sizing: border-box;
  padding: 0em 0.5em 0em 0.5em;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}
.vd-main .vd-title-div {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: fit-content;
  align-items: start;
  padding-top: 1em;
}
.vd-main .vd-title {
  font-size: 4em;
  color: var(--vd-text-title-color);
  text-align: right;
  text-transform: uppercase;
  letter-spacing: -4px;
  font-weight: 400;
  width: 100%;
  height: fit-content;
  line-height: 1em;
  /* helps with font top alignment issues */
  margin-top: -0.1em;
}

.vd-main .vd-instructions {
  justify-content: left;
  width: 100%;
  height: fit-content;
  font-size: 1em;
  text-align: left;
  color: var(--vd-text-instruction-color);
  text-transform: uppercase;
  line-height: 1em;
}

@media only screen and (max-width: 768px) {
  :root {
    --vd-text-size: 12px;
  }
  .vd-main .vd-title {
    font-size: 3em;
    letter-spacing: -3px;
  }
  .vd-base-grid .vd-file-icons {
    gap: 0.5em;
    width: 100%;
    height: 100%;
    align-items: center;
  }
  .vd-file .vd-file-name {
    text-align: left;
    width: max-content;
    max-width: 100px;
    height: fit-content;
  }
  .vd-main .vd-open-image {
    position: absolute;
    width: clamp(200px, 60%, 400px);
    height: fit-content;
    min-height: 100px;
    overflow-x: hidden;
  }
  .vd-main .vd-open-image img {
    margin: 0px;
    width: clamp(200px, 100%, 100%);
    height: clamp(200px, 80%, 100%);
    object-fit: contain;
  }
}

